# vaccine-eligibility

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prototype_learnings.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
locales/afr/LC_MESSAGES/: messages.mo  messages.po
locales/sot/LC_MESSAGES/: messages.mo  messages.po
locales/xho/LC_MESSAGES/: messages.mo  messages.po
locales/zul/LC_MESSAGES/: messages.mo  messages.po
mqr/: baseline_survey_wa.py  baseline_ussd.py  config.py  midline_ussd.py  utils.py
mqr/tests/: test_baseline_survey_wa.py  test_baseline_ussd.py  test_midline_ussd.py
vaccine/: application.py  ask_a_question.py  ask_a_question_config.py  base_application.py  cases.py  config.py  healthcheck_config.py  healthcheck_ussd.py  healthcheck_vacreg_ussd.py  hotline_callback.py  hotline_callback_config.py  main.py  models.py  real411.py  real411_config.py  sacoronavirus_powerbi_request_body  states.py  testing.py  utils.py  vaccine_cert.py  vaccine_eligibility.py  vaccine_reg_ussd.py  vaccine_reg_whatsapp.py  vacreg_config.py  validators.py  worker.py
vaccine/data/: medscheme.py  suburbs.py
vaccine/tests/: __init__.py  aaq_model_response.json  generate_test_ussd_data.py  generate_test_whatsapp_data.py  nicd_gis_wards.json  real411.json  sacoronavirus.html  sacoronavirus_cases.html  sacoronavirus_powerbi_vaccinations.json  test_application.py  test_ask_a_question.py  test_cases.py  test_healthcheck_ussd.py  test_healthcheck_vacreg_ussd.py  test_hotline_callback.py  test_main.py  test_models.py  test_real411.py  test_states.py  test_utils.py  test_vaccine_cert.py  test_vaccine_eligibility.py  test_vaccine_reg_ussd.py  test_vaccine_reg_whatsapp.py  test_validators.py  test_worker.py  vaccine_reg_loadtest.py
yal/: aaq_core.py  askaquestion.py  assessments.py  baseline_survey.py  change_preferences.py  config.py  content_feedback_survey.py  contentrepo.py  endline_terms_and_conditions.py  main.py  mainmenu.py  onboarding.py  optout.py  pleasecallme.py  pushmessages_and_study_optin.py  pushmessages_optin.py  quiz.py  rapidpro.py  segmentation_survey.py  servicefinder.py  servicefinder_feedback_survey.py  terms_and_conditions.py  turn.py  usertest_feedback.py  utils.py  validators.py  wa_fb_crossover_feedback.py  yal_base_application.py
yal/assessment_data/: A1_sexual_health_literacy.py  A2_locus_of_control.py  A3_depression_and_anxiety.py  A4_connectedness.py  A5_gender_attitude.py  A6_body_image.py  A7_self_perceived_healthcare.py  A8_self_esteem.py  body_image.py  connectedness.py  depression_and_anxiety.py  gender_attitude.py  locus_of_control.py  reengagement.py  sexual_health_literacy.py
yal/assessment_data_V2/: alcohol.py  anxiety.py  body_image.py  connectedness.py  depression.py  gender_attitude.py  self_esteem.py  self_perceived_healthcare.py  sexual_consent.py  sexual_health_literacy.py
yal/data/: seqmentation_survey_questions.py
yal/docs/: contact_fields.md
yal/keywords/: emergency.csv
yal/question_sets/endline/: alcohol_endline.py  anxiety_endline.py  body_image.py  connectedness.py  connectedness_endline.py  depression.py  endline_body_image.py  endline_depression.py  gender_attitude.py  gender_attitude_endline.py  locus_of_control.py  locus_of_control_endline.py  platform_review.py  platform_review_endline.py  self_esteem.py  self_esteem_endline.py  self_perceived_healthcare.py  self_perceived_healthcare_endline.py  sexual_consent_endline.py  sexual_health_literacy.py  sexual_health_literacy_endline.py
yal/scripts/: compare_docs_to_flow_results.py  qa_trigger_template_payload.py  update_rapidpro_contacts_persona_emoji.py
yal/surveys/: baseline.py  endline.py  facebook_invite.py  location.py
yal/tests/: conftest.py  servicefinder_categories.json  states_dictionary.md  states_dictionary.xlsx  test_askaquestion.py  test_assessments.py  test_change_preferences.py  test_content_feedback_survey.py  test_endline_terms_and_condition.py  test_main.py  test_mainmenu.py  test_onboarding.py  test_optout.py  test_pleasecallme.py  test_pushmessages_and_study_optin.py  test_pushmessages_optin.py  test_quiz.py  test_segmentation_survey.py  test_servicefinder.py  test_servicefinder_feedback_survey.py  test_terms_and_conditions.py  test_usertest_feedback.py  test_utils.py  test_wa_fb_crossover_feedback.py
yal/tests/surveys/: test_baseline.py  test_endline.py  test_facebook_invite.py  test_location.py
