[tool.poetry]
name = "vaccine"
version = "0.1.0"
description = "Demo application for what a vaccine eligibility flow could look like"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/praekeltfoundation/vaccine-eligibility"
repository = "https://github.com/praekeltfoundation/vaccine-eligibility"
packages = [
    { include = "vaccine" },
    { include = "mqr" },
    { include = "yal" },
]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.7.1"
sanic = "~21.12"
prometheus-client = "^0.9.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
sentry-sdk = "^1.5.2"
phonenumberslite = "^8.12.21"
pycountry = "^20.7.3"
aiohttp-client-cache = "^0.5.2"
rapidfuzz = ">=1.4.1,<1.6.0"  # 1.6.0 changes search result ordering
holidays = "^0.11.2"
email-validator = "^1.1.3"
zbar-py = "^1.0.4"
opencv-python-headless = "^4.5.3"
redis = "^4.3.3"
geopy = "2.2.0"
emoji = "^2.1.0"
types-emoji = "^2.0.1"
pytablereader = {extras = ["md"], version = "^0.31.3"}
setuptools = "^65.6.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.14.0"
Faker = "^8.1.0"
locust = "^1.4.4"
sanic-testing = "^0.8.3"
mypy = "^0.960"
types-redis = "^4.2.6"
types-python-dateutil = "^2.8.17"
types-setuptools = "^65.6.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov=vaccine --cov=yal --ignore=vaccine.testing"
filterwarnings = [
    "error::UserWarning:_pytest",  # For PytestUnhandledCoroutineWarning
    "error::DeprecationWarning",
    # Various things pass a deprecated loop arg, presumably for python 3.7
    "default::DeprecationWarning:asyncio",
    "default::DeprecationWarning:pytest_asyncio",
    "default::DeprecationWarning:sanic.server:556",
    "default::DeprecationWarning:sanic.server.runners:133",
]
